[package]
name = "ascendant_forge_game_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"
winit = "0.30.4"
nalgebra = "0.33.0"
rapier3d = "0.22.0"
mlua = { version = "0.9.9", features = ["lua54"] }
rodio = "0.19.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
